--- a/views/emailTemplate.html
+++ b/views/emailTemplate.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Password</title>
     <style>
-        h1, span{
-            color: #1db954;
-        }
-        header, main{
-            display: flex;
-            justify-content: start;
-            align-items: center;
-        }
-        .box{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-            border-radius: 7px;
-            background: hsl(0, 5%, 5%);
-        }
-        main:first-child{
-            color: white;
-        }
+      h1,
+      span {
+        color: #4567b7;
+      }
+      header,
+      main {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+      }
+      .box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        border-radius: 7px;
+        background: hsl(0, 5%, 5%);
+      }
+      main:first-child {
+        color: white;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Request for New Password</h1>
+      <h1>Request for New Password</h1>
     </header>
     <main>
-        <span>
-            New Password: 
-        </span>
-        <span class="box">
-            ${password}
-        </span>
+      <span> New Password: </span>
+      <span class="box"> ${password} </span>
     </main>
-</body>
+  </body>
 </html>
