--- a/views/index.html
+++ b/views/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Melodia Server</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lumina Server</title>
     <style>
-        body{
-          background: hsl(0, 2%, 0%);
-          color: #1db954;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          text-align: center;
-          height: 100vh;
+      body {
+        background: hsl(0, 2%, 0%);
+        color: #4567b7;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        height: 100vh;
+      }
+      h1 {
+        animation: glow 1s infinite alternate;
+      }
+      @keyframes glow {
+        0% {
+          opacity: 0;
         }
-        h1{
-          animation: glow 1s infinite alternate;
+        100% {
+          opacity: 1;
         }
-        @keyframes glow {
-          0%{
-            opacity: 0;
-          }
-          100%{
-            opacity: 1;
-          }
-        }
+      }
     </style>
-</head>
-<body>
-    <h1>Melodia Server Is Running...</h1>
-</body>
+  </head>
+  <body>
+    <h1>Lumina Server Is Running...</h1>
+  </body>
 </html>
