--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
     <style>
       body {
         background: hsl(0, 2%, 0%);
-        color: #4567b7;
+        color: #b871fd;
         display: flex;
         justify-content: center;
         align-items: center;
